--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         përdoret për prodhimin e bukës, picave, ëmbëlsirave,
                         produkteve të tharmit, biskotave dhe ëmbëlsirave në
                         përgjithësi. E shkëlqyeshme vetëm ose e përzier me miell
-                        të tjerë..</p>
+                        të tjerë jojo.</p>
                 </div>
                 <div class="product-image">
                     <img src="food/mielli.jpg" alt="Product 1">
