--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         të tjerë.</p>
                 </div>
                 <div class="product-image">
-                    <img src="food/mielli.jpg" alt="Product 1">
+                    <img src="food/1000.png" alt="Product 1">
                 </div>
             </div>
               <!-- Product 2 -->
